apache2-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache2
  template:
    metadata:
      labels:
        app: apache2
    spec:
      containers:
      - name: apache2
        image: image-registry.openshift-image-registry.svc:5000/gen150-app/apachetestslate
        command: ['/bin/bash','-c']
        args: ['bash'] 
        ports:
        - containerPort: 8080
          name: apache2
          protocol: TCP
        stdin: true
        volumeMounts:
        - name: app
          mountPath: "/app"
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            cpu: 2
            memory: 2Gi
      volumes:
      - name: app
        persistentVolumeClaim:
          claimName: apache2-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: apache2-service
spec:
  selector:
    app: apache2
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: apache
---
apiVersion: v1
kind: Route
metadata:
  name: apache2-route
  labels:
    ccs.ornl.gov/externalRoute: 'false'
  annotations:
    ccs.ornl.gov/requireAuth: 'true'
    openshift.io/host.generated: 'true'
spec:
  host: apache2.apps.marble.ccs.ornl.gov
  to:
    kind: Service
    name: apache2-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: apache
  wildcardPolicy: None
